js/js.translator/testData/incremental/invalidationWithPL/interfaceBecomeClass/lib1/l1.1.kt
open class Foo {
    fun getSomething() = 77
}
